# mh-cdw-extract

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
cdw_extract/: __init__.py  analytics.py  analytics_artifacts.py  analytics_compiler.py  analytics_models.py  callback.py  clickhouse.py  config.py  contracts.py  duck.py  engine.py  errors.py  execution_scope.py  extract.py  jobs.py  manifest.py  parquet_metadata.py  paths.py  preview.py  query.py  refresh.py  runtime.py  spi.py  user_dataset.py  user_dataset_jobs.py
cdw_extract/adapters/: __init__.py  legacy.py  local.py
cdw_extract/transforms/: __init__.py  compiler.py  runtime.py  schema.py
docs/: DEVELOPMENT.md  EMBEDDING.md  QUEUE_HOST_CHECKLIST_V2.md  QUEUE_MODULE_V2.md
examples/: preview_existing.py
tests/: test_analytics.py  test_analytics_compiler_boundaries.py  test_analytics_v2.py  test_architecture_boundaries.py  test_async_extract.py  test_calculated_expression_boundaries.py  test_documentation_contract.py  test_execution_core.py  test_extract_streaming_output.py  test_parquet_metadata.py  test_pipeline_base_query.py  test_refresh.py  test_refresh_boundaries.py  test_resource_safety_v2.py  test_safety_hardening.py  test_transforms.py  test_user_dataset_atomic_publish.py  test_window_aggregate_and_calculate.py  test_worker_runtime.py
tests/contracts/: boot-failed-callback-v2.json  boot-job-envelope-v2.json  boot-success-callback-v2.json  resolved-pipeline-hash-v1.json
